Bg Problem Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ footer {
   text-align: center;
   margin-top: 10%;
   margin-bottom: 12px;
-  background-image: url(./image/footer-bg.png);
+  background-image: url(../image/footer-bg.png);
   background-repeat: no-repeat;
 }
 
