--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ body {
   text-align: center;
   padding: 50px;
   margin: 0 auto;
+  margin-top: 35px;
   width: 560px;
   border-radius: 10px;
   color: #fff;
@@ -149,8 +150,8 @@ footer {
   border-bottom: 3px solid;
   border-image: linear-gradient(45deg, rgb(28, 206, 216), rgb(55, 153, 245));
   border-image-slice: 1;
-  width: 150px;
-  margin: 15px auto 5% auto;
+  width: 90px;
+  margin: 15px auto 0 auto;
 }
 
 .flex-container {
